; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_services.c_free_path.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_services.c_free_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path = type { %struct.path*, %struct.path* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.path*)* @free_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_path(%struct.path* %0) #0 {
  %2 = alloca %struct.path*, align 8
  store %struct.path* %0, %struct.path** %2, align 8
  %3 = load %struct.path*, %struct.path** %2, align 8
  %4 = getelementptr inbounds %struct.path, %struct.path* %3, i32 0, i32 1
  %5 = load %struct.path*, %struct.path** %4, align 8
  %6 = call i32 @heap_free(%struct.path* %5)
  %7 = load %struct.path*, %struct.path** %2, align 8
  %8 = getelementptr inbounds %struct.path, %struct.path* %7, i32 0, i32 0
  %9 = load %struct.path*, %struct.path** %8, align 8
  %10 = call i32 @heap_free(%struct.path* %9)
  %11 = load %struct.path*, %struct.path** %2, align 8
  %12 = call i32 @heap_free(%struct.path* %11)
  ret void
}

declare dso_local i32 @heap_free(%struct.path*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
